testsuite/tests/typecheck/should_fail/T7734.hs

module T7734 where

x `f` y = x x
(&) x y = x x
